--- a/src/App.css
+++ b/src/App.css
@@ -53,3 +53,9 @@ i{
 	margin: 0rem 3rem;
 	color: white;
 }
+#navbar h2{
+	display: block;
+	font-size: 3.5rem;
+	margin: 0rem 3rem;
+	color: white;
+}
