--- a/src/App.css
+++ b/src/App.css
@@ -59,3 +59,13 @@ i{
 	margin: 0rem 3rem;
 	color: white;
 }
+.textform{
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+}
+.textform h2{
+	text-align: center;
+	font-size: 3rem;
+	margin: 3rem 0rem;
+}
