--- a/src/App.css
+++ b/src/App.css
@@ -69,3 +69,10 @@ i{
 	font-size: 3rem;
 	margin: 3rem 0rem;
 }
+.container{
+	display: flex;
+	flex-direction: row;
+	margin: 3rem 0rem;
+	justify-content: center;
+	align-items: flex-start;
+}
