--- a/src/App.css
+++ b/src/App.css
@@ -104,3 +104,20 @@ i{
 	text-align:center;
 	margin: .5rem 0rem;
 }
+.btn {
+    padding: .7rem;
+    border-radius: 1rem;
+    border: .2rem solid rgba(128, 128, 128, 0.582);
+    transition-duration: .2s;
+    transition-property: all;
+    transition-timing-function: ease-in-out;
+    cursor: pointer;
+    background-color: rgb(41, 48, 56);
+    color: white;
+	font-size: 1.8rem;
+	margin: 1rem 3rem;
+}
+
+.btn:hover {
+    background-color: rgb(22, 26, 31);
+}
